<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_below="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F0EFF5"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/headsmall"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_change_avatar"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="上传头像"
                android:textSize="16dp"
                android:textColor="#A2A1A6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#F0EFF5"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/bbstitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/bbs_title"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/application_black"
                    android:textColorHint="@color/application_deep_gray_black"
                    android:textSize="16dp" />
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#dadada"/>
                <EditText
                    android:id="@+id/bbsmoney"
                    android:layout_below="@+id/bbscontent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/bbs_money"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:inputType="number"
                    android:textColor="@color/application_black"
                    android:textColorHint="@color/application_deep_gray_black"
                    android:textSize="16dp"
                    android:visibility="gone"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#dadada"/>
                <EditText
                    android:id="@+id/bbscontent"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:gravity="left|top"
                    android:hint="@string/bbs_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/application_black"
                    android:textColorHint="@color/application_deep_gray_black"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>